@@ -1,3 +1,9 @@
+2006-11-24  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil.Metadata/MetadataToken.cs:
+		Add a FromToken factory method to get a MetadataToken
+		from an integer token.
+
 2006-11-22  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil.Cil/GuidAttribute.cs:
